@@ -1,3 +1,8 @@
+(16/11/19)
+==========
+
+· Add Games > Diablo 2 LOD Spanish Ed.
+
 (02/10/19)
 ==========
 
